@@ -28,6 +28,8 @@ glibc (2.3.6-11) UNRELEASED; urgency=low
     glibc-bsd).
   * Add debian/patches/powerpc/cvs-gcc41-initfini.diff (fix build with gcc 4.1
     on powerpc) from upstream CVS.
+  * debian/sysdeps/i386.mk: add a symlink (/usr)/lib/i386-linux-gnu ->
+    (/usr)/lib/i486-linux-gnu.
 
   [ Denis Barbier ]
   * Add patches/all/submitted-new-brf-encoding.diff: Add new BRF encoding
